# Janus

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PRODUCTION_SETUP.md  README.md  docker-compose.yml  pyproject.toml  sentinel-proxy.example.toml
docs/: README.md  STRIPE_SETUP.md  api-reference.md  architecture.md  configuration.md  deployment.md  mcp-proxy-guide.md  sdk-quickstart.md  test-cases.md
docs/plans/: 2026-02-22-sentinel-v2-expansion-design.md  2026-02-22-sentinel-v2-expansion.md  2026-02-23-sentinel-v4-implementation.md  2026-02-23-sentinel-v4-killer-features-design.md  2026-02-26-real-tool-execution-design.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
janus/: __init__.py  __main__.py  config.py  email.py  licensing.py  tier.py
janus/circuit/: breaker.py
janus/cli/: app.py  demo.py  formatters.py  init.py
janus/core/: approval.py  data_extraction.py  decision.py  exceptions.py  guardian.py  injection.py  pipeline.py  predictor.py  proof.py  taint.py  threat_intel.py
janus/drift/: detector.py  goal_tracker.py
janus/exporters/: coordinator.py  json_log.py  json_logger.py  notifiers.py  otel.py  prometheus.py  webhook.py
janus/forensics/: explainer.py  exporter.py  recorder.py  trace.py
janus/identity/: __init__.py  challenge.py  credential.py  registry.py
janus/integrations/: __init__.py  crewai.py  langchain.py  mcp.py  openai.py
janus/itdr/: anomaly.py  collusion.py  (+2 more)
sentinel/: __init__.py  __main__.py  config.py
tests/: conftest.py  test_approval.py  test_circuit_breaker.py  test_configurable_policies.py  test_data_extraction.py  test_drift_detector.py  test_drift_long_conversation.py  test_email.py  test_exporter_coordinator.py  test_exporter_json.py  test_exporter_otel.py  test_exporter_prometheus.py  test_exporter_webhook.py  test_false_positive_detection.py  test_forensics.py  test_guardian.py  test_init.py  test_injection.py  test_injection_advanced.py  test_integration_agents.py  test_integration_crewai.py  test_integration_langchain.py  test_integration_mcp.py  test_integration_openai.py  test_itdr.py  test_licensing.py  test_licensing_routes.py  test_mcp_client.py  test_mcp_config.py  test_mcp_proxy.py  test_monitor.py  test_multi_model.py  test_notifiers.py  test_persistent_session_store.py  test_pipeline_integration.py  test_predictor.py  test_proof.py  test_registry.py  test_risk_engine.py  test_sandbox.py  (+12 more)
(+105 files in other folders)
