[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous security layer for AI agents"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.43.0",
    "pydantic>=2.6.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "anyio>=4.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "hypothesis>=6.98.0",
    "time-machine>=2.13.0",
]

[project.scripts]
sentinel = "sentinel.cli.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
